<resources>
    <string name="app_name">OpenMechanic</string>
    <string name="loading">Загрузка</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="too_many_requests">Too many requests error!</string>
    <string name="send_sms_again_quest">Отправить код повторно (%s)</string>
    <string name="send_sms_again">Отправить код повторно</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="incorrect_number">Не верно указали номер?</string>
    <string name="invalid_credentials">Invalid credentials error!</string>
    <string name="sms_quota_has_been_exceeded">квота SMS для проекта превышена</string>
    <string name="invalid_request">Отправить код повторно</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_name">Name must contain only letters between A-Z</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="incorrect_format">Формат телефона указан неправильно</string>
    <string name="no_internet">No Internet</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="email_desc">Этот адрес эл.почты будет использоваться для входа в аккаунт Mechanic</string>
    <string name="name">Имя</string>
    <string name="email">email</string>
    <string name="password">Пороль</string>
    <string name="submit">Подтверждение пороля</string>
    <string name="proceed">Далее</string>
    <string name="has_an_account">уже есть аккаунт?</string>
    <string name="login">вход</string>
    <string name="kg_country_phone_code">+996</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Заказы</string>
    <string name="title_dashboard">Создать</string>
    <string name="title_notifications">Профиль</string>
    <string name="continue1">Далее</string>
    <string name="registration">Регистрация</string>
    <string name="invalid_data">Имя не должно содержать символы !”№;%?()</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_name2">Ваше имя:</string>
    <string name="profile">Профиль</string>
    <string name="address_hint_title">Улица и дом:</string>
    <string name="address_hint">Название улицы и номер дома</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="new_orders">Новые</string>
    <string name="completed_orders">Завершенные</string>
    <string name="empty_orders">Пока нет заказов</string>
    <string name="empty_orders_desc">У вас нет текущих заказов. Создайте свой первый заказ</string>
    <string name="create_order">Создание заказа. Шаг 1 из 2</string>
    <string name="delivery_local">Доставка по г. Бишкек 🙌</string>
    <string name="delivery_region">Доставка в регионы КР 🇰🇬</string>
    <string name="from_to">Откуда и куда?</string>
    <string name="point_a">Точка A:</string>
    <string name="point_b">Точка Б:</string>
    <string name="city">Город:</string>
    <string name="city_address">Адрес получателя:</string>
    <string name="enter_street_address">Улица, номер дома, номер кв или офиса</string>
    <string name="enter_city">Укажите город доставки</string>
    <string name="sender_phone_title">Ваш номер телефона:</string>
    <string name="receiver_phone_title">Получатель:</string>
    <string name="create_order_title">Создание заказа</string>
    <string name="create_order2">Создание заказа. Шаг 2 из 2</string>
    <string name="what_delivery">Что доставляем?</string>
    <string name="delivery_type">Тип посылки:</string>
    <string name="choose_delivery_type">Укажите тип посылки</string>
    <string name="choose_region">Выберите область куда доставить</string>
    <string name="price">Цена выкупа:</string>
    <string name="choose_price">Укажите цену выкупа посылки</string>
    <string name="comment">Комментарий к заказу:</string>
    <string name="comment1">Комментарий:</string>
    <string name="cancel_description">Причина отмены:</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="create_order_btn">Создать заказ</string>
    <string name="order_success">Заказ оформлен</string>
    <string name="order_success_desc">Благодарим вас, что воспользовались нашим сервисом! Вы можете отследить перемещение курьера</string>
    <string name="main_page">Вернуться на главную</string>
    <string name="order_details">Детали заказа</string>
    <string name="cancel_order">Отменить заказ</string>
    <string name="cancel_order2">Отмена заказа</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="in_handle">В обработке</string>
    <string name="assigned">Курьер назначен</string>
    <string name="started">В пути</string>
    <string name="completed">Завершен</string>
    <string name="canceled">Отменен</string>
    <string name="logout">Выход</string>
    <string name="logout_message">Вы уверенны, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel_reason">Причину отмены:</string>
    <string name="show_cancel_reason">Укажите причину отмены</string>
    <string name="your_info">Ваши данные:</string>
    <string name="receiver_info">Данные получателя:</string>
    <string name="delivery_type2">Доставка по:</string>
    <string name="region">Область:</string>
    <string name="address">Адрес:</string>
    <string name="buyout">Сумма выкупа:</string>
    <string name="receiver_name">Имя получателя:</string>
    <string name="order_number">Заказ №%s</string>
    <string name="need_update_message">Необходимо обновить приложение</string>
    <string name="need_update_title">Обновите приложение</string>
    <string name="need_update_confirm">Обновить</string>
    <string name="for_bishkek">По городу Бишкек</string>
    <string name="region_bishkek">В регионы Кыргызстана</string>
    <string name="express_title">Экспресс Доставка</string>
    <string name="price_bishkek">129 сом</string>
    <string name="price_region">199 сом</string>
    <string name="price_express">169 сом</string>
    <string name="rules_bishkek">*посылка не более 5 кг \n*доставка в течении 2 часов</string>
    <string name="rules_region">*посылка не более 5 кг \n*доставка в течении 1–2 дней</string>
    <string name="rules_express">*посылка не более 5 кг \n*доставка в течении 1–2 дней</string>
    <string name="how_to_contact">Как связаться:</string>
    <string name="our_fees">Наши тарифы</string>
    <string name="fees_city">Доставка по городу 129 сом</string>
    <string name="fees_city_desc">В черту города входят участки выделенные светлым цветом </string>
    <string name="fees_city_out">Доставка за город 199 сом</string>
    <string name="fees_city_out_desc">В черту города не входят участки выделенные темным цветом</string>
    <string name="understand">Понятно</string>
    <string name="fees_title">Тарифы</string>
    <string name="fees_title_desc">Просим вас предварительно ознакомиться с тарифами на доставку нашей курьерской службы</string>
    <string name="congrats">Поздравляем!</string>
    <string name="free_delivery">Мы дарим вам 1 бесплатную доставку по г. Бишкек</string>
    <string name="close_window">Закрыть окно</string>
    <string name="get_free_delivery">Заказать бесплатную доставку</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="contact_us">Связаться с нами</string>
    <string name="faq">Частые вопросы</string>
    <string name="call">Позвонить</string>
    <string name="whatsapp">Написать в w/a</string>
    <string name="telegram">Написать в telegram</string>
    <string name="free_delivery2">Бесплатная доставка по Бишкеку!</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="version">%s (%s)</string>
    <string name="privacy_policy_link">Пользуясь сервисом Taigan вы даете согласие на использование ваших данных для работы приложения.
Политика конфиденциальности</string>
    <string name="created_time">Заказ создан:</string>
    <string name="delivery_time">Заказ доставят:</string>
</resources>