<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="11dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_location" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@drawable/background_order_id"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/finish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_finish" />

        <com.it.openmechanic.ui.custom_ui.CustomSeparator
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:color="@color/order_background_color"
            app:layout_constraintTop_toBottomOf="@+id/orderId" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/created_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_time"
            android:textColor="@color/light_blue"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/created_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_time"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/created_time_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delivery_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_time"
            android:textColor="@color/green_color_opacity"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_time"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/created_time_title"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/express_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="created_time_title, created_time, delivery_time_title, delivery_time"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_order_id"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/created_time"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sender_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/grey_opacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/receiver_phone"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/receiver_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="viewEnd"
            android:textColor="@color/grey_opacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/sender_phone"
            app:layout_constraintTop_toTopOf="@+id/sender_phone"
            app:layout_constraintBottom_toBottomOf="@+id/sender_phone"/>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/nameBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="sender_phone, receiver_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_phone" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sender_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/black_opacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/receiver_address"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameBarrier" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/receiver_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAlignment="viewEnd"
            android:textColor="@color/black_opacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/sender_address"
            app:layout_constraintTop_toBottomOf="@+id/nameBarrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/addressBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="sender_address, receiver_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sender_address" />


        <LinearLayout
            android:id="@+id/comment_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressBarrier">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cancel_description"
                android:textColor="@color/black_opacity"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/comment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_bg_comment_status"
                android:padding="16dp"
                android:textColor="@color/black_opacity"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/order_details"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_order_details"
            android:text="@string/order_details"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_view"
            app:layout_goneMarginTop="16dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_order"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/background_order_details"
            android:backgroundTint="@color/flat_red_1"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="15dp"
            android:text="@string/cancel_order"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_details" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_on_map"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/background_order_details"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="15dp"
            android:text="@string/show_on_map"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_details" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>